--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,11 @@
       <h1>Todo-App</h1>
     </header>
     <main class="main">
-      <section class="categories_container">
+      <section
+        class="categories_container"
+        id="categories_container"
+        data-selected="default"
+      >
         <nav>
           <ul class="categories">
             <li>
@@ -40,6 +44,58 @@
         </div>
       </section>
     </main>
+    <div class="overlay" id="overlay">
+      <div class="modal">
+        <form>
+          <div class="form-control">
+            <label for="title">Title</label>
+            <input
+              type="text"
+              name="title"
+              id="title"
+              placeholder="Work on my thesis"
+            />
+          </div>
+          <div class="form-control">
+            <label for="description">Description</label>
+            <textarea
+              name="description"
+              id="description"
+              cols="30"
+              rows="7"
+              placeholder="Work on my thesis instead of doing this project. Help mee!!"
+            ></textarea>
+          </div>
+          <div class="form-control">
+            <label for="date">Due Date</label>
+            <input type="date" name="date" id="date" />
+          </div>
+          <fieldset>
+            <legend>Priority</legend>
+            <div class="priorities">
+              <div class="priority_control low">
+                <input type="radio" name="priority" id="low" value="low" />
+                <label for="low">LOW</label>
+              </div>
+              <div class="priority_control medium">
+                <input
+                  type="radio"
+                  name="priority"
+                  id="medium"
+                  value="medium"
+                />
+                <label for="medium">MEDIUM</label>
+              </div>
+              <div class="priority_control high">
+                <input type="radio" name="priority" id="high" value="high" />
+                <label for="high">HIGH</label>
+              </div>
+            </div>
+          </fieldset>
+          <button id="addTodoButton" type="submit">Add Todo</button>
+        </form>
+      </div>
+    </div>
     <button id="fab" class="fab">+</button>
   </body>
 </html>
