implemented add category logic and a lot of visual changes

--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,7 @@
         data-selected="Home"
       >
         <nav>
-          <ul class="categories" id="categories">
-            <li>
-              <button data-category="Home" class="category_button">Home</button>
-            </li>
-          </ul>
+          <ul class="categories" id="categories"></ul>
           <button id="add-category" class="add_category">+ Add Category</button>
           <form id="add_category__form" class="form-control hidden">
             <label for="category_input">Category Name:</label>
